# fernet-cli

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/fernet/: __init__.py
