[metadata]
name = fernet-cli
version = 0.0.3
author = Getaround
license = MIT
license_files = ( LICENSE )
description = A CLI to manipulate fernet encrypted secrets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/drivy/fernet-cli
project_urls =
    Homepage = https://github.com/drivy/fernet-cli
    Bug Tracker = https://github.com/drivy/fernet-cli/issues
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
  cryptography

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fernet = fernet:run
